--- a/index.html
+++ b/index.html
@@ -379,8 +379,9 @@ if(f=!1,v=d.querySelector('#vwoCode'),cc={},-1<d.URL.indexOf('__vwo_disable__')|
 
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-   <script src="bdc.js"></script>
+   <script src="script.js"></script>
 
 </body>
 
 </html>
+
